@@ -2,9 +2,13 @@ package com.helloworld.gc;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 
+/**
+ * -Xmn80m -Xms500m -Xmx500m  -XX:+UseConcMarkSweepGC  -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -XX:+PrintGCDetails  -XX:+PrintGCTimeStamps  -Xloggc:/Users/helloworld/logs/gc.log -Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n -Dcom.sun.management.jmxremote.port=9999 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false
+ */
 public class FullGc {
-    public static void main(String[] args) {
+    public static void main(String[] args) throws Exception {
         System.out.println("start");
 
         List<Person> list = new ArrayList<Person>();
@@ -15,6 +19,7 @@ public class FullGc {
             person.setAddr("addr");
             list.add(person);
         }
+        TimeUnit.SECONDS.sleep(100);
         System.gc();
 
         list.remove(list.size() - 1);
@@ -27,6 +32,7 @@ public class FullGc {
         list.remove(list.size() - 1);
 
         System.gc();
+        TimeUnit.SECONDS.sleep(1000);
 
         System.out.println("end");
     }
